--- a/NextUMEAN/public/app/recursos/templates/recursos.html
+++ b/NextUMEAN/public/app/recursos/templates/recursos.html
@@ -14,8 +14,8 @@
                         <div style="margin-top: 15px;">
                             <ul class="nav nav-pills nav-stacked">
                                 <li class="header">Folders</li>
-                                <li ui-sref-active="active"><a href="#"><i class="fa fa-inbox"></i> Recibidos</a></li>
-                                <li ui-sref-active="active"><a href="#"><i class="fa fa-pencil-square-o"></i> Enviados</a></li>
+                                <li ui-sref-active="active"><a ui-sref="app.recursos.recibidos"><i class="fa fa-inbox"></i> Recibidos</a></li>
+                                <li ui-sref-active="active"><a ui-sref="app.recursos.enviados"><i class="fa fa-pencil-square-o"></i> Enviados</a></li>
                             </ul>
                         </div>
                     </div>
