--- a/NextUMEAN/server/includes/scripts.html
+++ b/NextUMEAN/server/includes/scripts.html
@@ -22,6 +22,9 @@
 <script type="text/javascript" src="/app/services/session.js"></script>
 <script type="text/javascript" src="/app/services/tareas.js"></script>
 <script type="text/javascript" src="/app/services/recursos.js"></script>
+<script type="text/javascript" src="/app/services/dashboard.js"></script>
 
 <!--Directives Angular-->
 <script type="text/javascript" src="/app/directives/files.js"></script>
+
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
