--- a/NextUMEAN/server/includes/scripts.html
+++ b/NextUMEAN/server/includes/scripts.html
@@ -8,6 +8,8 @@
 <script type="text/javascript" src="/vendor/lodash/lodash.js"></script>
 <script type="text/javascript" src="/vendor/async/lib/async.js"></script>
 
+<!--Socket.IO-->
+<script src="/socket.io/socket.io.js"></script>
 <!--App Angular-->
 <script type="text/javascript" src="/app/app.js"></script>
 <!--Controllers Angular-->
@@ -23,8 +25,7 @@
 <script type="text/javascript" src="/app/services/tareas.js"></script>
 <script type="text/javascript" src="/app/services/recursos.js"></script>
 <script type="text/javascript" src="/app/services/dashboard.js"></script>
+<script type="text/javascript" src="/app/services/socket.js"></script>
 
 <!--Directives Angular-->
 <script type="text/javascript" src="/app/directives/files.js"></script>
-
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
