--- a/NextUMEAN/server/includes/layout.html
+++ b/NextUMEAN/server/includes/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="Teamapp">
     <head>
+        <base href="/">
         <!--Cambió y se agregó nuevo-->
         {% include 'links.html' %}
         
