--- a/NextUMEAN/server/includes/scripts.html
+++ b/NextUMEAN/server/includes/scripts.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="/vendor/angular-toastr/dist/angular-toastr.js"></script>
 <script type="text/javascript" src="/vendor/lodash/lodash.js"></script>
 <script type="text/javascript" src="/vendor/async/lib/async.js"></script>
+<script type="text/javascript" src="/vendor/angular-socket-io/socket.js"></script>
 
 <!--Socket.IO-->
 <script src="/socket.io/socket.io.js"></script>
@@ -26,6 +27,7 @@
 <script type="text/javascript" src="/app/services/tareas.js"></script>
 <script type="text/javascript" src="/app/services/recursos.js"></script>
 <script type="text/javascript" src="/app/services/dashboard.js"></script>
+<!--<script type="text/javascript" src="/app/services/chat.js"></script>-->
 <script type="text/javascript" src="/app/services/socket.js"></script>
 
 <!--Directives Angular-->
