--- a/NextUMEAN/server/includes/scripts.html
+++ b/NextUMEAN/server/includes/scripts.html
@@ -27,7 +27,7 @@
 <script type="text/javascript" src="/app/services/tareas.js"></script>
 <script type="text/javascript" src="/app/services/recursos.js"></script>
 <script type="text/javascript" src="/app/services/dashboard.js"></script>
-<!--<script type="text/javascript" src="/app/services/chat.js"></script>-->
+<script type="text/javascript" src="/app/services/chat.js"></script>
 <script type="text/javascript" src="/app/services/socket.js"></script>
 
 <!--Directives Angular-->
