--- a/NextUMEAN/public/app/chat/templates/general.html
+++ b/NextUMEAN/public/app/chat/templates/general.html
@@ -4,12 +4,12 @@
         <h3 class="box-title">Chat General</h3>
     </div>
     <div class="box-body chat" id="chat-box" style="overflow:auto;height:300px;" scroll-glue>
-        <div class="item" ng-repeat="message in messagesList[chat]">
+        <div class="item" ng-repeat="message in messagesG">
             <img src="img/avatar.png" alt="user image" class="online" />
             <p class="message">
                 <a href="#" class="name">
                     <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> {{message.fecha | date: 'HH:mm:ss a'}}</small>
-                    {{message.nombre}}
+                    {{message.remitente.nombre}}a
                 </a>
                 {{message.contenido}}
             </p>
