--- a/NextUMEAN/public/app/chat/templates/individual.html
+++ b/NextUMEAN/public/app/chat/templates/individual.html
@@ -3,9 +3,8 @@
         <i class="fa fa-comments-o"></i>
         <h3 class="box-title">{{otro.nombre}}</h3>
     </div>
-	<div class="box-body chat" id="chat-box" style="overflow:auto;height:300px;"  scroll-glue>
-		
-		<div class="item" ng-repeat="message in getMessagesChat(messagesList)">
+	<div class="box-body chat" id="chat-box" style="overflow:auto;height:300px;" scroll-glue>
+		<div class="item" ng-repeat="message in messagesList[chat]">
 			<img src="img/avatar.png" alt="user image" class="online"/>
 			<p class="message">
 				<a href="#" class="name">
