--- a/NextUMEAN/public/app/sign/templates/login.html
+++ b/NextUMEAN/public/app/sign/templates/login.html
@@ -11,7 +11,7 @@
         </div>
         <div class="footer">
             <button type="submit" class="btn bg-olive btn-block">Entrar</button>
-            <p>Si eres nuevo, porfavor <a ui-sref="register" class="text-center">regístrate</a></p>
+            <p>Si eres nuevo, porfavor <a ui-sref="registro" class="text-center">regístrate</a></p>
         </div>
     </form>
     <div class="margin text-center">
