--- a/NextUMEAN/public/app/includes/navbar.html
+++ b/NextUMEAN/public/app/includes/navbar.html
@@ -14,7 +14,7 @@
                 </a>
                 <ul class="dropdown-menu">             
                     <li class="user-header bg-light-blue">
-                        <img src="img/avatar3.png" class="img-circle" alt="User Image">
+                        <img src="img/avatar/{{usuario.avatar}}" class="img-circle" alt="User Image">
                         <p>
                             {{usuario.nombre}} - {{usuario.nombre_usuario}}
                         </p>
