--- a/NextUMEAN/public/app/includes/sidebar.html
+++ b/NextUMEAN/public/app/includes/sidebar.html
@@ -1,7 +1,7 @@
 <section class="sidebar">
     <div class="user-panel">
         <div class="pull-left image">
-            <img src="/img/avatar3.png" class="img-circle" alt="User Image" />
+            <img src="/img/avatar/{{usuario.avatar}}" class="img-circle" alt="User Image" />
         </div>
         <div class="pull-left info">
             <p>Hola, {{usuario.nombre_usuario}}</p>
