--- a/NextUMEAN/public/app/recursos/templates/detalle.html
+++ b/NextUMEAN/public/app/recursos/templates/detalle.html
@@ -1,6 +1,6 @@
 <div class="box-body chat" id="chat-box" style="overflow: auto; width: auto; height: 250px;">
     <div class="item">
-        <img src="img/avatar.png" alt="user image" class="online">
+        <img src="img/avatar/{{usuario.avatar}}" alt="user image" class="online">
         <p class="message">
             <a href="#" class="name">
                 <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> {{recurso.fecha | date: 'yyyy-MM-dd HH:mm'}}</small>
