--- a/NextUMEAN/public/app/recursos/templates/detalle.html
+++ b/NextUMEAN/public/app/recursos/templates/detalle.html
@@ -1,4 +1,4 @@
-<div class="box-body chat" id="chat-box" style="overflow: auto; width: auto; height: 250px;">
+<div class="box-body chat" id="chat-box" style="overflow: auto; width: auto; max-height: 700px;">
     <div class="item">
         <img src="img/avatar/{{usuario.avatar}}" alt="user image" class="online">
         <p class="message">
@@ -10,9 +10,12 @@
         </p>
         <div class="attachment">
             <h4>Archivos Adjuntos</h4>
-            <p class="filename" ng-repeat="archivo in recurso.archivos">
-                <a target="_self" href="/public/recursos/{{archivo}}" download="{{archivo}}">{{archivo}}</a>
-            </p>
+            <span class="filename" ng-repeat="archivo in recurso.archivos">
+                <a target="_self" href="/recursos/{{archivo}}" download="{{archivo}}">
+                    <img src="/recursos/{{archivo}}" class="img-responsive img-thumbnail" style="max-height:150px"/>
+                </a>
+            </span>
+
         </div>
     </div>
 </div>
